# Chatbot-generico

./: .env.example  .gitignore  README.md  implementation_plan.md  patch_dark_mode.py  patch_realtime.py  patch_realtime_text.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  db.py  routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/rag/: __init__.py  ingest.py  retriever.py  vector_db.py
app/services/: __init__.py  llm_provider.py  memory.py  persona_service.py
app/static/: index.html  notifications.html  rag.html
docs/: implementação_rag.md  implementação_rag_frontend.md
docs/backend/: api.md
docs/frontend/: interfaces.md
docs/services/: llm_personas.md
docs/setup/: installation.md
prototypes/: EcoApp Mobile.html
scripts/: patch_saved_notifications.py  update_gemini_sdk.py  update_styles.py
tests/: conftest.py  test_api.py  verify_chat_override.py  verify_notifications_manual.py
